create the semantic HTML-structure

--- a/index.html
+++ b/index.html
@@ -19,7 +19,31 @@
   <body>
     <header class="header"></header>
 
-    <main class="main"></main>
+    <main class="main">
+      <div class="container">
+        <div class="screen"></div>
+        <div class="buttons_container">
+          <button class="clear">Clear</button>
+          <button class="delete">Delete</button>
+          <button class="button">7</button>
+          <button class="button">8</button>
+          <button class="button">9</button>
+          <button class="button">/</button>
+          <button class="button">4</button>
+          <button class="button">5</button>
+          <button class="button">6</button>
+          <button class="button">*</button>
+          <button class="button">1</button>
+          <button class="button">2</button>
+          <button class="button">3</button>
+          <button class="button">-</button>
+          <button class="button">.</button>
+          <button class="button">0</button>
+          <button class="button">=</button>
+          <button class="button">+</button>
+        </div>
+      </div>
+    </main>
 
     <footer class="footer">
       <p>
