--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <header class="header"></header>
 
     <main class="main">
-      <div class="container">
-        <div class="screen"></div>
+      <div class="calculator">
+        <div class="display"></div>
         <div class="buttons_container">
           <button class="clear">Clear</button>
           <button class="delete">Delete</button>
