--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
 
     <main class="main">
       <div class="calculator">
-        <div class="display"></div>
+        <input type="text" id="display" readonly></input>
         <div class="buttons_container">
-          <button class="clear">Clear</button>
+          <button class="clear" onclick="clearDisplay()">Clear</button>
           <button class="delete">Delete</button>
-          <button class="button">7</button>
-          <button class="button">8</button>
-          <button class="button">9</button>
-          <button class="button">/</button>
-          <button class="button">4</button>
-          <button class="button">5</button>
-          <button class="button">6</button>
-          <button class="button">*</button>
-          <button class="button">1</button>
-          <button class="button">2</button>
-          <button class="button">3</button>
-          <button class="button">-</button>
-          <button class="button">.</button>
-          <button class="button">0</button>
-          <button class="button">=</button>
-          <button class="button">+</button>
+          <button class="button" onclick="appendNumber('7')">7</button>
+          <button class="button" onclick="appendNumber('8')">8</button>
+          <button class="button" onclick="appendNumber('9')">9</button>
+          <button class="button" onclick="appendOperator('/')">/</button>
+          <button class="button" onclick="appendNumber('4')">4</button>
+          <button class="button" onclick="appendNumber('5')">5</button>
+          <button class="button" onclick="appendNumber('6')">6</button>
+          <button class="button" onclick="appendOperator('*')">*</button>
+          <button class="button" onclick="appendNumber('1')">1</button>
+          <button class="button" onclick="appendNumber('2')">2</button>
+          <button class="button" onclick="appendNumber('3')">3</button>
+          <button class="button" onclick="appendOperator('-')">-</button>
+          <button class="button" onclick="appendOperator('.')">.</button>
+          <button class="button" onclick="appendNumber('0')">0</button>
+          <button class="button" onclick="calculateResult()">=</button>
+          <button class="button" onclick="appendOperator('+')">+</button>
         </div>
       </div>
     </main>
