update events of buttons

--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
       <div class="calculator">
         <input type="text" id="display" readonly></input>
         <div class="buttons_container">
-          <button class="clear" onclick="calculator.clearDisplay()">Clear</button>
+          <button class="clear" onclick="clearDisplay()">Clear</button>
           <button class="delete">Delete</button>
-          <button class="button" onclick="calculator.appendNumber('7')">7</button>
-          <button class="button" onclick="calculator.appendNumber('8')">8</button>
-          <button class="button" onclick="calculator.appendNumber('9')">9</button>
-          <button class="button" onclick="calculator.appendOperator('/')">/</button>
-          <button class="button" onclick="calculator.appendNumber('4')">4</button>
-          <button class="button" onclick="calculator.appendNumber('5')">5</button>
-          <button class="button" onclick="calculator.appendNumber('6')">6</button>
-          <button class="button" onclick="calculator.appendOperator('*')">*</button>
-          <button class="button" onclick="calculator.appendNumber('1')">1</button>
-          <button class="button" onclick="calculator.appendNumber('2')">2</button>
-          <button class="button" onclick="calculator.appendNumber('3')">3</button>
-          <button class="button" onclick="calculator.appendOperator('-')">-</button>
-          <button class="button" onclick="calculator.appendOperator('.')">.</button>
-          <button class="button" onclick="calculator.appendNumber('0')">0</button>
-          <button class="button" onclick="calculator.calculateResult()">=</button>
-          <button class="button" onclick="calculator.appendOperator('+')">+</button>
+          <button class="button" onclick="appendNumber('7')">7</button>
+          <button class="button" onclick="appendNumber('8')">8</button>
+          <button class="button" onclick="appendNumber('9')">9</button>
+          <button class="button" onclick="appendOperator('/')">/</button>
+          <button class="button" onclick="appendNumber('4')">4</button>
+          <button class="button" onclick="appendNumber('5')">5</button>
+          <button class="button" onclick="appendNumber('6')">6</button>
+          <button class="button" onclick="appendOperator('*')">*</button>
+          <button class="button" onclick="appendNumber('1')">1</button>
+          <button class="button" onclick="appendNumber('2')">2</button>
+          <button class="button" onclick="appendNumber('3')">3</button>
+          <button class="button" onclick="appendOperator('-')">-</button>
+          <button class="button" onclick="appendOperator('.')">.</button>
+          <button class="button" onclick="appendNumber('0')">0</button>
+          <button class="button" onclick="calculateResult()">=</button>
+          <button class="button" onclick="appendOperator('+')">+</button>
         </div>
       </div>
     </main>
