--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <!-- <input type="text" id="display" readonly></input> -->
         <div class="display">
           <div class="display-last" id="lastOperationDisplay"></div>
-          <div class="display-current" id="currentOperationDisplay" value="0"></div>
+          <div
+            class="display-current"
+            id="currentOperationDisplay"
+          >0</div>
         </div>
         <div class="buttons_container">
           <button class="clear" onclick="clearDisplay()">Clear</button>
@@ -43,7 +46,9 @@
           <button class="button" onclick="appendOperator('-')">-</button>
           <button class="button" onclick="appendOperator('.')">.</button>
           <button class="button" onclick="appendNumber('0')">0</button>
-          <button class="button" onclick="calculateResult()">=</button>
+          <button class="button" id="equalsBtn" onclick="appendOperator('=')">
+            =
+          </button>
           <button class="button" onclick="appendOperator('+')">+</button>
         </div>
       </div>
