create ability to string together several operations and get the right answer, with each pair of numbers being evaluated at a time

--- a/index.html
+++ b/index.html
@@ -24,32 +24,35 @@
         <!-- <input type="text" id="display" readonly></input> -->
         <div class="display">
           <div class="display-last" id="lastOperationDisplay"></div>
-          <div
-            class="display-current"
-            id="currentOperationDisplay"
-          >0</div>
+          <div class="display-current" id="currentOperationDisplay">0</div>
         </div>
         <div class="buttons_container">
           <button class="clear" onclick="clearDisplay()">Clear</button>
-          <button class="delete">Delete</button>
+          <button class="delete" onclick="deleteNumber()">Delete</button>
           <button class="button" onclick="appendNumber('7')">7</button>
           <button class="button" onclick="appendNumber('8')">8</button>
           <button class="button" onclick="appendNumber('9')">9</button>
-          <button class="button" onclick="appendOperator('/')">/</button>
+          <button class="button operator" onclick="appendOperator('/')">
+            /
+          </button>
           <button class="button" onclick="appendNumber('4')">4</button>
           <button class="button" onclick="appendNumber('5')">5</button>
           <button class="button" onclick="appendNumber('6')">6</button>
-          <button class="button" onclick="appendOperator('*')">*</button>
+          <button class="button operator" onclick="appendOperator('*')">
+            *
+          </button>
           <button class="button" onclick="appendNumber('1')">1</button>
           <button class="button" onclick="appendNumber('2')">2</button>
           <button class="button" onclick="appendNumber('3')">3</button>
-          <button class="button" onclick="appendOperator('-')">-</button>
-          <button class="button" onclick="appendOperator('.')">.</button>
-          <button class="button" onclick="appendNumber('0')">0</button>
-          <button class="button" id="equalsBtn" onclick="appendOperator('=')">
-            =
+          <button class="button operator" onclick="appendOperator('-')">
+            -
           </button>
-          <button class="button" onclick="appendOperator('+')">+</button>
+          <button class="button" onclick="appendNumber('.')">.</button>
+          <button class="button" onclick="appendNumber('0')">0</button>
+          <button class="button" id="equalsBtn">=</button>
+          <button class="button operator" onclick="appendOperator('+')">
+            +
+          </button>
         </div>
       </div>
     </main>
