--- a/index.html
+++ b/index.html
@@ -27,32 +27,25 @@
           <div class="display-current" id="currentOperationDisplay">0</div>
         </div>
         <div class="buttons_container">
-          <button class="clear" onclick="clearDisplay()">Clear</button>
-          <button class="delete" onclick="deleteNumber()">Delete</button>
-          <button class="button" onclick="appendNumber('7')">7</button>
-          <button class="button" onclick="appendNumber('8')">8</button>
-          <button class="button" onclick="appendNumber('9')">9</button>
-          <button class="button operator" onclick="appendOperator('/')">
-            /
-          </button>
-          <button class="button" onclick="appendNumber('4')">4</button>
-          <button class="button" onclick="appendNumber('5')">5</button>
-          <button class="button" onclick="appendNumber('6')">6</button>
-          <button class="button operator" onclick="appendOperator('*')">
-            *
-          </button>
-          <button class="button" onclick="appendNumber('1')">1</button>
-          <button class="button" onclick="appendNumber('2')">2</button>
-          <button class="button" onclick="appendNumber('3')">3</button>
-          <button class="button operator" onclick="appendOperator('-')">
-            -
-          </button>
-          <button class="button" onclick="appendNumber('.')">.</button>
-          <button class="button" onclick="appendNumber('0')">0</button>
-          <button class="button" id="equalsBtn">=</button>
-          <button class="button operator" onclick="appendOperator('+')">
-            +
-          </button>
+          <button class="btn btn-red" id="clearBtn">Clear</button>
+          <button class="btn btn-blue" id="deleteBtn">Delete</button>
+
+          <button class="btn" data-number>7</button>
+          <button class="btn" data-number>8</button>
+          <button class="btn" data-number>9</button>
+          <button class="btn" data-operator>/</button>
+          <button class="btn" data-number>4</button>
+          <button class="btn" data-number>5</button>
+          <button class="btn" data-number>6</button>
+          <button class="btn" data-operator>*</button>
+          <button class="btn" data-number>1</button>
+          <button class="btn" data-number>2</button>
+          <button class="btn" data-number>3</button>
+          <button class="btn" data-operator>-</button>
+          <button class="btn" id="pointBtn">.</button>
+          <button class="btn" data-number>0</button>
+          <button class="btn" id="equalsBtn">=</button>
+          <button class="btn" data-operator>+</button>
         </div>
       </div>
     </main>
