--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <div class="display-current" id="currentOperationDisplay">0</div>
         </div>
         <div class="buttons_container">
-          <button class="btn btn-red" id="clearBtn">Clear</button>
-          <button class="btn btn-blue" id="deleteBtn">Delete</button>
+          <button class="btn btn-red" id="clearBtn">CLEAR</button>
+          <button class="btn btn-blue" id="deleteBtn">DELETE</button>
 
           <button class="btn" data-number>7</button>
           <button class="btn" data-number>8</button>
